# TurboMachinery_solver

./: .env  .env.template  .gitignore  CHANGELOG.md  CMakeLists.txt  Readme.md  Requirements.txt  build_release.ps1  check.py  installer.iss  main.cpp  start_backend_server.bat  verify_physics.py
.tmp.driveupload/: 37250  37254  37258  37262  37266  37272  37276  37280  37284  37286  37290  37294  37298  37302  37306  37310  37314  37318  37322  37330  37334  37336  37342  37346  37350  37354  37356  37360  37364  63752  63762  63766  63770  63774  63778
Backend/: Dockerfile  api_server.py  api_server.spec  requirements.txt
Backend/services/: mentor_service.py  subscription_service.py
Backend/solver/: __intit__.py  coordinate_engine.py  equation_graph.py
Backend/templates/: login.html
Frontend/: app_icon.rc  resources.qrc
Frontend/src/: main.cpp
Frontend/src/ui/: ChatMentorWidget.cpp  ChatMentorWidget.h  MainWindow.cpp  MainWindow.h  ProfessorDashboard.cpp  ProfessorDashboard.h  ProfileExplorer3DWidget.cpp  ProfileExplorer3DWidget.h  SidebarWidget.cpp  SidebarWidget.h  VelocityTriangleWidget.cpp  VelocityTriangleWidget.h  VisualEffectsOverlay.cpp  VisualEffectsOverlay.h
build_test/: CMakeCache.txt
